--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "[![Actions Status](https://github.com/jsteacat/qa-auto-engineer-javascript-project-87/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/jsteacat/qa-auto-engineer-javascript-project-87/actions)",
   "main": ".src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jest"
   },
   "author": "jsteacat",
   "license": "ISC",
@@ -17,9 +17,12 @@
     "yaml": "^2.3.4"
   },
   "devDependencies": {
-    "eslint": "^8.56.0",
+    "@jest/globals": "^29.7.0",
+    "eslint": "^8.40.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.29.1",
-    "jest": "^29.7.0"
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.2",
+    "jest": "^29.6.0",
+    "jest-cli": "^29.6.0"
   }
 }
