--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/jsteacat/qa-auto-engineer-javascript-project-87/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/jsteacat/qa-auto-engineer-javascript-project-87/actions)",
-  "main": ".src/index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "npx jest"
   },
