--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
     "semi": ["error", "always"],
     "no-console": "off",
     "no-unused-vars": "off",
+    "no-mutating-methods": "off",
     "import/extensions": "off"
   }
 }
